--- a/src/components/Review.module.css
+++ b/src/components/Review.module.css
@@ -1,9 +1,13 @@
+.review-paper {
+  min-height: 280px;
+}
+
 @media (max-width: 760px) {
   .review-container {
     font-size: 15px !important;
   }
   .review-paper {
     /* To make heights even when some reviews are long */
-    min-height: 338px !important;
+    min-height: 338px;
   }
 }
