--- a/src/pages/cats.css
+++ b/src/pages/cats.css
@@ -5,5 +5,19 @@
 }
 p {
   font-size: 18px;
-  color:#353535;
+  color: #353535;
+}
+@media (max-width: 760px) {
+  .alice-carousel {
+    width: 90%;
+    box-shadow: 20px 32px 40px rgb(0 0 0 / 45%);
+    margin: auto;
+  }
+}
+@media (max-width: 900px) {
+  .alice-carousel {
+    box-shadow: 20px 32px 40px rgb(0 0 0 / 45%);
+    margin: auto;
+    width: 90%;
+  }
 }
